# vmware-mgmt

./: .ansible-lint  .dockerignore  .flake8  .gitignore  .pydocstyle  .pylintrc  .travis.yml  .yamllint.yml  Dockerfile  LICENSE  Makefile  README.md  ansible.cfg  docker-compose.yml  inventory.yml  pb.clone-vm.yml  pb.example.yml  pb.get-vms.yml  pyproject.toml  requirements.yml  tasks.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  docker-ci.yml
collections/: requirements.yml
config_context/: nameservers.json  networks.json
docs/: CHANGELOG.md  example-env.txt
inventory/: hosts  inventory.yml  nautobot.yml
inventory/group_vars/: all.yml  servers_esxi.yml  servers_workstation.yml
inventory/host_vars/: EdgeRouterX.yml
packer-build/template-build/: ubuntu-template.auto.pkrvars.hcl  ubuntu-template.pkr.hcl  variables.pkr.hcl
packer-builds/iso/: .gitkeep
packer-builds/manifests/: 2022-03-30 04:20:30.json  2022-03-30 04:57:19.json  2022-03-30 06:02:15.json  2022-04-09 22:35:29.json
packer-builds/template-build/: ubuntu-template.auto.pkrvars.hcl  ubuntu-template.pkr.hcl  variables.pkr.hcl
packer-builds/template-build/data/: user-data.pkrtpl.hcl
packer-builds/template-build/scripts/: cleanup-root.sh  docker.sh  iac.sh  omzsh.sh  python-utils.sh  setup.sh  ssh.sh  user.sh
playbooks/: pb.clone-vm.yml  pb.edgeos-update.yml  pb.get-vms.yml  pb.onboard.yml
playbooks/common/: pb.onboard.yml  pb.rsync.yml  pb.snmp.yml
playbooks/network/: pb.deploy-vpn.yml  pb.edgeos-update.yml
playbooks/vsphere/: pb.configure-vsphere.yml  pb.deploy-vm.yml  pb.get-vcenter-info.yml  pb.inventory.yml  pb.vsphere_to_nautobot.yml
playbooks/vsphere/tasks/: deploy-vms.yml
playbooks/workstation/: pb.clone-vm.yml  pb.get-vms.yml  pb.start-vms.yml
plugins/filters/: README.md  filter1.py
plugins/modules/: README.md  module1.py
roles/: README.md  requirements.yml
scripts/: pynauto-test.py
terraform-plans/TestMachine/: ansible.cfg  variables.tf
terraform-plans/awx/: main.tf  variables.tf
terraform-plans/crunchy-iac/: main.tf  variables.tf
terraform-plans/dev-serv-01/: .terraform.lock.hcl  apache-install.yml  variables.tf
terraform-plans/dev-serv-02/: apache-install.yml  variables.tf
terraform-plans/docker-services-1/: variables.tf
terraform-plans/example/: main.tf
terraform-plans/kcna-control-node/: variables.tf
tests/ansible-lint-rules/: CapitalNamesRule.py
